-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 20
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8301198 | 17.0.7 | Dukebot | P4 | Resolved | Fixed | b01 |
The fix for JDK-8287491 was a little too aggressive in that it modified a test (TestInvalidDebugInfo ) to prevent type2name being called with BasicType::T_ILLEGAL. While T_ILLEGAL models an invalid value and it should not show up in certain contexts, simply converting it to a string should not crash the VM. That is, in the context of type2name, T_ILLEGAL is a valid value.
I would recommend adopting the fix suggested by [~kbarrett]: https://bugs.openjdk.org/browse/JDK-8287491?focusedCommentId=14498870&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-14498870
I would recommend adopting the fix suggested by [~kbarrett]: https://bugs.openjdk.org/browse/JDK-8287491?focusedCommentId=14498870&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-14498870
- backported by
-
JDK-8301198 converting a defined BasicType value to a string should not crash the VM
-
- Resolved
-
- relates to
-
JDK-8287491 compiler/jvmci/errors/TestInvalidDebugInfo.java fails new assert: assert((uint)t < T_CONFLICT + 1) failed: invalid type #
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/d1ad5962
-
Commit
openjdk/jdk/f2a32d99
-
Review
openjdk/jdk17u-dev/1094
-
Review
openjdk/jdk/10447
-
Review(master)
openjdk/jdk11u-dev/3091
(2 links to)