8293691: converting a defined BasicType value to a string should not crash the VM

Reviewed-by: phh
Backport-of: f2a32d996ae09620474771c46a649f6c4e1148ad